<resources>
    <string name="app_name">SergeiLysenkoApp</string>
    <string name="hello">hello</string>
    <string name="text0">text0</string>
    <string name="text1">text1</string>
    <string name="button">Button</string>
    <string name="dz0">dz0</string>
    <string name="dz1">dz1</string>
    <string name="dz2">dz2</string>
    <string name="dz2_1">dz2-1</string>
    <string name="dz3">dz3</string>
    <string name="dz4">dz4</string>
    <string name="dilan_conner">dilan_conner</string>
    <string name="tropies">tropies</string>
    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="four">four</string>
    <string name="fiftyfour">54</string>
    <string name="twelve">12</string>
    <string name="dz3name">mn.sd</string>
    <string name="sz3NailBrockman">fngkaenrg;aw</string>
    <string name="dz3country">fjteyue</string>
    <string name="dz3usa">euyrt</string>
    <string name="dz3postalCode">gfdfhg</string>
    <string name="dz3Sixty">sfdgsdfg</string>
    <string name="dz3DateOfBirth">fxcvxcvzx</string>
    <string name="dz3Feb21">zcvzxvczxvczxvc</string>
    <string name="dz3Gender">gcvbx</string>
    <string name="dz3MaleGender">bbbb</string>
    <string name="dz3Height">2222</string>
    <string name="dz3HeightNumber">2222</string>
    <string name="dz3Phone">555555555</string>
    <string name="dz3PhoneNuber">77777777777777</string>
    <string name="super_news_zvezda">zvezda</string>
    <string name="appwidget_text">fnkjfkjgsdfl</string>
    <string name="imageview">ImageView</string>
    <string name="download">download</string>
    <string name="some">some</string>
    <string name="hi">Hi</string>
    <string name="bye">bye</string>
    <string name="dz5">dz5</string>
    <string name="dz5_1">dz5_1</string>
    <string name="enter3nums">enter 3 nums</string>
</resources>
