<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <Button
                android:id="@+id/mainScreenButtonDz0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="160dp"
                android:text="@string/dz0"
                android:textSize="30sp"/>
        <Button
                android:id="@+id/mainScreenButtonDz1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="260dp"
                android:text="@string/dz1"
                android:textSize="30sp"/>
        <Button
                android:id="@+id/mainScreenButtonDz2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="360dp"
                android:text="@string/dz2"
                android:textSize="30sp"/>

    </FrameLayout>
</LinearLayout>